# cfb-tracker

./: .dockerignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml  railway.toml  worker.Dockerfile
.claude/: claude.md  settings.local.json
src/cfb_tracker/: config.py  db.py  fetcher.py  main.py  normalizer.py  queue.py  sync.py  twitter.py  worker.py
supabase/functions/webhook-forwarder/: index.ts
supabase/migrations/: 001_webhook_triggers.sql
tests/: __init__.py  conftest.py  test_db.py  test_fetcher.py  test_foo.py  test_normalizer.py  test_queue.py  test_sync.py  test_twitter.py  test_worker.py
